# urlsafe

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
app/: core.py  main.py  models.py
k8s/: deployment.yaml  hpa.yaml
k8s/urlsafe/: Chart.yaml  values.yaml
k8s/urlsafe/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
tests/: bulk_runner.py  integration_test.py  simple_test.py  test_urls.txt
