[project]
name = "urlsafe"
version = "0.1.0"
description = "An nsfw check service for urls"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "tldextract>=5.3.1",
    "uvicorn>=0.40.0",
]
